[package]
name = "pumpdotfun-sdk"
version = "0.1.2"
edition = "2021"
authors = ["Jaikumar Mohite <mohitejaikumar@gmail.com>"]
description = "Rust SDK for interacting with the pump.fun contract"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/mohitejaikumar/pumpdotfun-sdk"
homepage = "https://github.com/mohitejaikumar/pumpdotfun-sdk"
documentation = "https://docs.rs/pumpdotfun-sdk"
keywords = ["pumpdotfun", "pumpdotfun-sdk", "solana", "sdk", "library"]
categories = ["development-tools", "api-bindings"]
exclude = ["target", "scripts", ".gitignore", ".github", ".vscode"]


[[bin]]
name = "simple_example"
path = "examples/simple_example.rs"

[dependencies]
anchor-lang = {version = "0.31.1", features = ["init-if-needed", "derive"]}
solana-client = "2.3.4"
solana-sdk = {version = "2.3.1"}
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
borsh = "1.5.7"
